--- a/demos/3dtek/css/style.css
+++ b/demos/3dtek/css/style.css
@@ -57,6 +57,7 @@ hr {
 	border: 0;
 }
 
+
 /* Navigation */
 nav .navbar-toggle {
 	margin: 8px 15px 8px 0;
@@ -202,25 +203,40 @@ nav .navbar-toggle {
 
 
 /* Home Section */
-#intro {
+#intro-1 {
 	display: table;
 	width: 100%;
 	max-height: 560px;
 	height: auto;
-	padding: 100px 0 ;
+	padding: 0 ;
 	color: #FFFFFF;
-	background: url(../img/header.jpg) no-repeat center left 45%;
+	background: url(../img/header-1.jpg) no-repeat center left 45%;
 	background-color: #000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
 	-o-background-size: cover;
 }
+
+#intro-2 {
+	display: table;
+	width: 100%;
+	max-height: 560px;
+	height: auto;
+	padding: 0;
+	color: #FFFFFF;
+	background: url(../img/header-2.jpg) no-repeat center left 45%;
+	background-color: #000;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+}
+
 #intro .intro-body {
 	display: table-cell;
 	vertical-align: middle;
-	padding-top:125px;
-	padding-bottom:75px;
+	padding:165px 150px;
 }
 #intro .intro-body H1 {
 	border-color: rgb(64, 77, 95);
@@ -234,12 +250,6 @@ nav .navbar-toggle {
 #intro .intro-body H3 {
 	font-size: 32px;
 	font-weight: 500;
-}
-#intro li{
-	padding: 10px;
-	font-size: 20px;
-	color: #FFFFFF;
-	font-weight: bold;
 }
 #intro a{
 	color: #FFFFFF;
@@ -271,14 +281,15 @@ nav .navbar-toggle {
 }
 @media(max-width:768px) {
 	#intro {
-		height: 60%;
 		padding: 0;
 	}
 	#intro .intro-body {
 		display: table-cell;
 		vertical-align: middle;
-		padding-top: 250px;
+		padding-top: 150px;
 		padding-bottom: 150px;
+		padding-left: 50px;
+		padding-right: 50px;
 	}
 }
 .btn-default {
@@ -365,6 +376,15 @@ nav .navbar-toggle {
 
 #capabilities img {
 	margin-bottom:10px;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+#capabilities .slick-prev:before,
+.slick-next:before
+{
+	opacity: .75;
+	color: #666;
 }
 
 
