--- a/demos/3dtek/css/style.css
+++ b/demos/3dtek/css/style.css
@@ -426,6 +426,8 @@ nav .navbar-toggle {
 	margin-bottom:10px;
 	margin-left:auto;
 	margin-right:auto;
+	max-width:100%;
+	max-height:450px;
 }
 
 #services .slick-slide img {
@@ -449,7 +451,6 @@ nav .navbar-toggle {
 
 #services .gallery-slider-for .slick-active img {
 	opacity:1!important;
-	/*transition:opacity 0.3s ease-in, transform 5s ease-in;*/
 	transition:opacity 0.3s ease-in;
 	animation:5s ease-in 0s 1 slick-zoom-in;
 }
