--- a/demos/3dtek/css/style.css
+++ b/demos/3dtek/css/style.css
@@ -7,20 +7,33 @@ body, html {
 	height: 100% !important;
 	font-size: 16px;
 }
+
 a {
 	color: #0D263B;;
 }
+
 a:hover, a:focus {
 	text-decoration: none;
 	color: #226297;
 }
+
+img {
+	max-width:100%;
+}
+
+iframe {
+	max-width:100%;
+}
+
 ul, ol {
 	list-style: none;
 }
+
 .btn {
 	border-radius: 50px;
 	font-weight: 600;
 }
+
 #preloader {
 	position: fixed;
 	top: 0;
@@ -31,6 +44,7 @@ ul, ol {
 	z-index: 99999;
 	height: 100%;
 }
+
 #status {
 	position: absolute;
 	left: 50%;
@@ -40,6 +54,7 @@ ul, ol {
 	margin: -32px 0 0 -32px;
 	padding: 0;
 }
+
 ul, ol {
 	padding: 0;
 	webkit-padding: 0;
@@ -475,6 +490,7 @@ nav .navbar-toggle {
 	margin-left:auto;
 	margin-right:auto;
 	width:520px;
+	max-width:100%;
 	max-height:400px;
 	overflow: hidden;
 }
@@ -486,6 +502,16 @@ nav .navbar-toggle {
 	animation:5s ease-in 0s 1 slick-zoom-in;
 }
 
+@media (max-width: 768px) {
+	#services .gallery-slider-for {
+		max-width:260px;
+		max-height:200px;
+	}
+	
+	#services .gallery-slider-for .slick-active img {
+		height:200px;
+	}
+}
 
 
 /* quote Section*/
