--- a/css/style.css
+++ b/css/style.css
@@ -9,33 +9,35 @@ body, html {
 }
 h1 {
 	font-weight: 700;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 h1 strong {
 	font-weight: 900;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 h2 {
+	font-size: 36px;
 	margin: 0;
 	color: #555;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 h3 {
-	font-size: 18px;
+	font-size: 24px;
 	font-weight: 700;
 	color: #555;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 h4 {
-	font-weight: 500;
+	font-size: 24px;
+	font-style: italic;
 	color: #333333;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 h5 {
 	text-transform: uppercase;
 	font-weight: 700;
 	line-height: 20px;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 p {
 	font-size: 16px;
@@ -84,8 +86,22 @@ hr {
 	margin-bottom: 30px;
 	border: 0;
 }
-
 .btn-default {
+	color: #FDFDFD;
+	background-color: transparent;
+	border: 2px solid #FDFDFD;
+	border-radius: 32px;
+	padding: 10px;
+	font-size: 18px;
+	transition: all 0.5s;
+	font-weight: bold;
+}
+.btn-default:hover, .btn-info:focus, .btn-info.focus, .btn-info:active, .btn-info.active {
+	color: #FFFFFF;
+	border: 2px solid #FFFFFF;
+	background-color: transparent;
+}
+.btn-info {
 	color: #f6f6f6;
 	background: #2FAFAF;
 	border: 0;
@@ -94,13 +110,17 @@ hr {
 	transition: all 0.5s;
 	font-weight: bold;
 }
-.btn-default:hover, .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active {
+.btn-info:hover, .btn-info:focus, .btn-info.focus, .btn-info:active, .btn-info.active {
 	color: #f6f6f6;
 	background-color: #2CA5A5;
 }
 .btn-lg {
-	font-size: 25px;
+	font-size: 28px;
 	padding: 15px 50px;
+}
+.panel-heading {
+	border-bottom: 1px solid #DDD;
+	margin-bottom: 25px;
 }
 .section-title.center {
 	padding: 30px 0;
@@ -179,7 +199,7 @@ nav a {
 	width: 100%;
 	max-height: 760px;
 	height: auto;
-	padding: 260px 0px 100px;
+	padding: 220px 0px 140px;
 	color: #ffffff;
 	background: linear-gradient(40deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)), url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_2400/v1520108434/intro.jpg) no-repeat center center;
 	background-color: #000;
@@ -191,20 +211,26 @@ nav a {
 #intro .intro-body {
 	display: table-cell;
 	vertical-align: middle;
-	padding: 40px;
+	padding: 0px 40px;
 }
 #intro .panel {
 	color: #333333;
 }
 #intro .intro-body H1 {
-	font-size: 48px;
+	font-size: 60px;
 	font-weight: 700;
 }
-#intro .intro-body H3 {
-	font-size: 32px;
-	font-weight: 500;
+#intro .intro-body H2 {
+	font-size:32px;
 	font-style: italic;
-	font-weight: bold;
+	color: #FFFFFF;
+	font-weight: 500;
+	font-family: 'Raleway', sans-serif;
+	padding-bottom: 20px;
+}
+#intro .intro-body H3 {
+	font-size: 34px;
+	font-weight: 500;
 	color: #FFFFFF;
 }
 #intro li{
@@ -245,7 +271,7 @@ nav a {
 
 /* About Section */
 #about {
-	padding: 180px 0;
+	padding: 140px 0;
 	background: #F9F9F9;
 }
 #about li {
@@ -269,15 +295,36 @@ nav a {
 	margin-bottom: 30px;
 }
 
-/* Testimonials Section */
-#quote {
-	background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_2400/v1520108455/quote.jpg);
+/* Vision Section */
+#vision {
+	background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_1200/v1529190934/quote.jpg);
 	background-size: cover;
 	background-attachment: fixed;
-	color: #ddd;
-	padding: 180px 0px 140px ;
+	padding: 40px 0px;
+	color: #FFFFFF;
 }
-#quote h2 {
+#vision h1 {
+	font-size:46px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: #FFFFFF;
+}
+#vision h2 {
+	font-size: 26px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	color: #FFFFFF;
+}
+
+
+/* Testimonials Section */
+#quote {
+	background: #113a57;
+	color: #FFFFFF;
+	padding: 100px 0px;
+}
+#quote h1 {
+
 	color: #f6f6f6;
 }
 #quote hr {
@@ -290,63 +337,31 @@ nav a {
 
 /* Services Section */
 #services {
-	padding: 80px 0;
-	background-color: #ECECEC;
-}
-
-@media (max-width:768px) {
-	#services {
-	    	padding: 50px 0;
-		background-color: #ECECEC;
-	}
-}
-
-#services .service {
-	padding: 70px 10px;
-	background-color: #FFFFFF;
-	box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.18);
-	margin: 20px 0px;
-}
-#services h3 {
-	font-size: 20px;
-	font-weight: 600;
-}
-#services a {
-	color:#2FAFAF;
-}
-/*#services i.fa {
-	font-size: 36px;
-	transition: all 0.5s;
-}*/
-
-
-
-/* Team Section */
-#team {
-	padding: 80px 0;
+	padding: 140px 0;
 	background: #F9F9F9;
 }
-img.img-thumbnail.team-img {
-	width: 200px;
-	height: 200px;
-	border: 0;
-	border-radius: 50%;
-	background-color: #f6f6f6;
+#services li {
+	list-style: none;
+	padding: 0;
+	font-size: 22px;
 }
-#team a {
-	color:#2FAFAF;
+#services li:before {
+	content: "✓";
+	font-weight: 600;
+	padding-right: 10px;
+	color: #2FAFAF;
 }
-#team .bio {
-	padding:10px 20px;
+#services i.fa {
+	color: #DDDDDD;
+	text-shadow: 0 0 2px #333;
 }
-#team .thumbnail {
-	background: transparent;
-	border: 0;
+	
+#services p {
+	margin-top: 20px;
+	margin-bottom: 30px;
 }
-#team .thumbnail .caption {
-	padding: 9px;
-	color: #444444;
-}
+
+
 /* Testimonials Section */
 #testimonials {
 	background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/hold-ipad.jpg);
