--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,10 @@ h4 {
 	font-family: 'Raleway', sans-serif;
 }
 h5 {
-	text-transform: uppercase;
 	font-weight: 700;
-	line-height: 20px;
+	font-size: 20px;
 	font-family: 'Montserrat', sans-serif;
+	margin: 15px 0px;
 }
 p {
 	font-size: 16px;
