--- a/demos/3dtek/css/style.css
+++ b/demos/3dtek/css/style.css
@@ -246,7 +246,8 @@ nav .navbar-toggle {
 	padding: 0 ;
 	color: #FFFFFF;
 	/*background: url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_1366/v1525840606/panel-bg.jpg) no-repeat center left 45%;*/
-	background: url(../img/optiv.jpg) no-repeat center left 45%;
+	/*background: url(../img/optiv.jpg) no-repeat center left 45%;*/
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/optiv.jpg) no-repeat center left 45%;
 	background-color: #000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -261,9 +262,25 @@ nav .navbar-toggle {
 	height: auto;
 	padding: 0;
 	color: #FFFFFF;
-	background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_1366/v1525840604/machine-bg.jpg);
+	background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/5-axis.jpg);
+	/*background:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_1366/v1525840604/machine-bg.jpg);*/
 	/*background: url(http://res.cloudinary.com/initialapps/image/upload/c_scale,w_1366/v1525840604/machine-bg.jpg) no-repeat center left 45%;*/
 	/*background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/multi-axis-cnc-lathe.jpeg);*/
+	background-color: #000;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
+}
+
+#intro-3 {
+	display: table;
+	width: 100%;
+	max-height: 560px;
+	height: auto;
+	padding: 0;
+	color: #FFFFFF;
+	background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../img/edm.jpg) no-repeat center left 45%;;
 	background-color: #000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -526,7 +543,7 @@ nav .navbar-toggle {
 	display: block;
 	margin-left:auto;
 	margin-right:auto;
-	width:520px;
+	width:600px;
 	max-width:100%;
 	max-height:400px;
 	overflow: hidden;
