--- a/demos/3dtek/css/style.css
+++ b/demos/3dtek/css/style.css
@@ -394,7 +394,6 @@ nav .navbar-toggle {
 	text-transform: uppercase;
 }
 
-
 /* About Section */
 #about {
 	padding: 80px 0 100px;
@@ -422,6 +421,38 @@ nav .navbar-toggle {
 	margin: 0 auto;
 }
 
+/* 5-Axis Section */
+#five-axis h1 {
+	color: #FFFFFF;
+	text-align: center;
+	font-weight: bold;
+	font-size: 42px;
+}
+
+#five-axis h3 {
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 36px;
+}
+
+#five-axis .banner {
+	padding: 140px 0px;
+	position: relative;
+	overflow: hidden;
+	background: rgba(0, 0, 0, 0.5) url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAF0lEQVQIW2NkYGD4z8DAwMgAI0AMDA4AI3EBBCKrOnQAAAAASUVORK5CYII=");
+}
+
+#five-axis .banner__video {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: auto;
+	min-width: 100%;
+	height: auto;
+	min-height: 100%;
+	transform: translateX(-50%) translateY(-50%);
+	z-index: -1;
+}
 
 /* Capabilities Section */
 #capabilities {
